--- a/pom.xml
+++ b/pom.xml
@@ -231,6 +231,14 @@
                         <targetURL>http://${aem.host}:${aem.port}/crx/packmgr/service.jsp</targetURL>
                         <failOnError>true</failOnError>
                         <failOnMissingEmbed>true</failOnMissingEmbed>
+
+                        <subPackages>
+                            <subPackage>
+                                <groupId>com.adobe.acs</groupId>
+                                <artifactId>acs-aem-commons-content</artifactId>
+                                <filter>true</filter>
+                            </subPackage>
+                        </subPackages>
                     </configuration>
                 </plugin>
                 <!-- Apache Felix Bundle Plugin -->
