--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
     </modules>
 
     <properties>
+   		<aem.protocol>http</aem.protocol>
         <aem.host>localhost</aem.host>
         <aem.port>4502</aem.port>
         <aem.publish.host>localhost</aem.publish.host>
@@ -217,7 +218,7 @@
                         </execution>
                     </executions>
                     <configuration>
-                        <slingUrl>http://${aem.host}:${aem.port}/crx/repository/crx.default</slingUrl>
+                        <slingUrl>${aem.protocol}://${aem.host}:${aem.port}/crx/repository/crx.default</slingUrl>
                         <usePut>true</usePut>
                         <failOnError>true</failOnError>
                     </configuration>
@@ -228,7 +229,7 @@
                     <artifactId>content-package-maven-plugin</artifactId>
                     <version>0.0.24</version>
                     <configuration>
-                        <targetURL>http://${aem.host}:${aem.port}/crx/packmgr/service.jsp</targetURL>
+                        <targetURL>${aem.protocol}://${aem.host}:${aem.port}/crx/packmgr/service.jsp</targetURL>
                         <failOnError>true</failOnError>
                         <failOnMissingEmbed>true</failOnMissingEmbed>
 
